# flask_test_app

./: README.md  pyproject.toml  run.py
app/: __init__.py  config.py  models.py  routes.py  schema.py
app/api/: review_api.py
migrations/versions/: 3149d2b9e0f5_add_manual_index_on_created_ad.py  6c3dd67a6319_create_reviews_table.py  8b892e7403cd_add_manual_index_on_sentiment_and_.py
